[project]
name = "oura-mcp-server"
version = "0.1.0"
description = "MCP Server for Oura Ring API integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[project.scripts]
oura-mcp-server = "oura_mcp_server.server:main"
